# utplayer

./: .clang-format  .gitignore  BrowseView.qml  CMakeLists.txt  SearchFieldItem.qml  TODO.txt  TopBrowsePanel.qml  UserButton.qml  main.cpp  qml.qrc
cmake/: utils.cmake
modules/app/: CMakeLists.txt  qml.qrc
modules/app/include/: ApiConfig.h.in
modules/app/js/: time.js
modules/app/qml/: BrowseView.qml  LeftBrowsePanel.qml  SearchFieldItem.qml  TopBrowsePanel.qml  UserButton.qml  VideoRectangleDelegate.qml  VideosView.qml  main.qml
modules/app/src/: main.cpp
modules/libapi/: CMakeLists.txt
modules/libapi/include/api/: ApiRequest.h  ApiResponse.h  GApiAccessData.h  GApiCommandExecutor.h  GApiWrapper.h  OAuth2GApiSession.h  OAuth2Session.h  UserProfile.h  Utils.h  YtWrapper.h
modules/libapi/include/api/commands/: Command.h  GetMostPopular.h
modules/libapi/include/api/models/: KeyValueModel.h  KeyValueModelVectorModel.h
modules/libapi/src/: ApiRequest.cpp  ApiResponse.cpp  GApiAccessData.cpp  GApiCommandExecutor.cpp  GApiWrapper.cpp  OAuth2GApiSession.cpp  OAuth2Session.cpp  UserProfile.cpp  Utils.cpp  YtWrapper.cpp
modules/libapi/src/commands/: Command.cpp  GetMostPopular.cpp
modules/libapi/src/models/: KeyValueModel.cpp  KeyValueModelVectorModel.cpp
qml/: LeftBrowsePanel.qml  VideosView.qml
src/: main.cpp
